1.5.9:
- Resolve possible crash when waking device
- Remove usage of Google Play Services (was previously used in releases on Google Play and Amazon)

1.5.8:
- Resolve minor sound delay by preloading sounds
- Increase session message maximum length from 160 to 4096

1.5.7:
- Added preset widgets
- Removed "Set to silent" notification control setting (use "Alarms only" instead)
- Resolve sound/vibration delays on some devices

1.5.6:
- Sessions may now be imported from previous exports (CSV files)
- Advertisements have been removed

1.5.5:
- Fixed add session dialog sometimes overwriting existing session when adding a new session
- Fixed skipping session delay causing start sound to be played twice

1.5.4:
- Recorded sessions may now be edited
- A prompt is now shown when calculated streak does not match current streak
- Calculation of meditation streak window has been improved (streak buffer was not being applied consistently)
- Long press shortcuts have been added to calendar buttons moving one year backward/forward
- Fixed tapping home screen widget causing sign in to MediNET dialog to be shown
- Possibly fixed issues with sounds not reliably playing on Android 8.0+ (related to OS battery optimization)
- Removed daily reminder on Android 8.0+ (this behavior is no longer possible without the application constantly running)

1.5.3:
- Fix interval sounds not reliably playing
- Fix timer not displaying when returning to the app while paused
- Add 'Widget color' preference

1.5.2:
- Potentially fix sounds not reliably playing
- Add 'Streak resets at' preference

1.5.1:
- Fix crash when upgrading full screen preference

1.5.0:
- Fix setting device to vibrate/silent on Android 6.0+
- Split full screen preference into three options: disabled, during session and always
- Obey volume preference when playing sounds in the Settings screen
- Remove 'Turn screen off' option as it requires device administrator privileges

1.4.9:
- Fix crash when starting session on Android 8.0+