@@ -1,10 +1,29 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_settings"
-        android:icon="?attr/actionIconSettings"
+        android:id="@+id/action_resources"
+        android:icon="?attr/actionIconResources"
         android:orderInCategory="100"
         android:showAsAction="always"
-        android:title="@string/settings"/>
+        android:title="@string/resources">
+        <menu>
+            <item
+                android:id="@+id/action_how_to_meditate"
+                android:title="@string/howToMeditate" />
+            <item
+                android:id="@+id/action_reddit_community"
+                android:title="@string/meditationSubreddit" />
+            <item
+                android:id="@+id/action_replay_tutorial"
+                android:title="@string/replayTutorial" />
+        </menu>
+    </item>
+
+    <item
+        android:id="@+id/action_settings"
+        android:icon="?attr/actionIconSettings"
+        android:orderInCategory="101"
+        android:showAsAction="always"
+        android:title="@string/settings" />
 
 </menu>
